--- a/pagina.html
+++ b/pagina.html
@@ -468,5 +468,12 @@
     </div>
   </div>
 
-</body>
+<!--Jquery-->
+<script src="js/jquery-3.3.1.min.js"></script>
+<!--bootstrap js-->
+<script src="js/bootstrap.bundle.min.js"></script>>
+<!--script-->
+<script src="js/script.js"></script>
+	
+	</body>
 </html>
